<resources>
    <string name="app_name">Blood Donations</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="email">Εισάγεται τα προωπικά σας στοιχεία (Ονοματεπώνυμο, Αριθμός τηλεφώνου) για να γίνεται δότης μυελού των οστών.</string>
    <string name="bloodtypes">Ομάδες</string>
    <string name="donator">Δότης</string>
    <string name="receiver">Δέκτης</string>
    <string name="aplus">A+</string>
    <string name="aplusdon">A+, AB+</string>
    <string name="aplusrec">A+, A-, O+, O-</string>
    <string name="aminus">A-</string>
    <string name="aminusdon">A+, A-, AB+, AB-</string>
    <string name="aminusrec">A-, O-</string>
    <string name="bplus">B+</string>
    <string name="bplusdon">B+, AB+</string>
    <string name="bplusrec">B+, B-, O+, O-</string>
    <string name="bminus">B-</string>
    <string name="bminusdon">B+, B-, AB+, AB-</string>
    <string name="bminusrec">B-, O-</string>
    <string name="abplus">AB+</string>
    <string name="abplusrec">Όλες</string>
    <string name="abminus">AB-</string>
    <string name="abminusdon">AB+, AB-</string>
    <string name="abminusrec">AB-, A-, B-, O-</string>
    <string name="oplus">O+</string>
    <string name="oplusdon">O+, A+, B+, AB+</string>
    <string name="oplusrec">O+, O-</string>
    <string name="ominus">O-</string>
    <string name="ominusdon">Όλους</string>
    <string name="textBloodbottle">Εισάγεται το ονοματεπώνυμό σας και του ατόμου που θέλετε να δώσετε φιάλες αίματος μαζί με το τηλέφωνό σας, τον τύπο αίματος του ατόμου και τις φιάλες που χρειάζονται.</string>
    <string name="Namep">Ονομ. Ασθενή</string>
    <string name="name">Ονοματεπώνυμο</string>
    <string name="number">Τηλέφωνο</string>
    <string name="bloodtype">Τύπος αίματος</string>
    <string name="Bottles">Φιάλες</string>
    <string name="loginuser">Σύνδεση Χρήστη</string>
    <string name="ineddata">Εισαγωγή στοιχείων</string>
    <string name="BeforeDon">Πριν από μια αιμοδοσία</string>
    <string name="Compatibility">Συμβατότητα ομάδων</string>
    <string name="BloodClubs">Σύλλογοι αιμοδοτών</string>
    <string name="datefordonation">Ραντεβού για αιμοδοσία</string>
    <string name="dates">Ημερομηνίες αιμοδοσιών</string>
    <string name="choicedates">Επιλογή ημερομηνίας</string>
    <string name="LastDonation">Τελευταία αιμοδοσία</string>
    <string name="GeneralInformation">Γενικές πληροφορίες</string>
    <string name="Service">Εξυπηρέτηση</string>
    <string name="BloodBottles">Φιάλες αίματος</string>
    <string name="BoneMarrow">Δότης μυελού των οστών</string>
    <string name="ServiceProblems">Ομάδα Εξυπηρέτησης</string>
    <string name="info">Υπολογίζεται ο χρόνος που έχει περάσει από την τελευταία αιμοδοσία.</string>
    <string name="requirements">Καταχώρησε την ημερομηνία (dd/mm/yyyy) της προηγούμενης αιμοδοσίας.</string>
    <string name="male">Άρρεν</string>
    <string name="female">Θήλυ</string>
    <string name="notification">Σημείωση: Οι άνδρες μπορούν να δώσουν αίμα κάθε τρεις μήνες, ενώ οι γυναίκες κάθε τέσσερις.</string>
    <string name="LastDate">Τελευταία αιμοδοσία</string>
    <string name="NextDate">Επόμενη αιμοδοσία</string>
    <string name="check">Ελεγχος</string>
    <string name="InfoForChoiceDate">Εισάγεται το ονοματεπώνυμό σας (με κεφαλαία και όπως αναγράφεται στην ταυτότητα) μαζί με την ημερομηνία που θέλετε να δώσετε αίμα και τον σύλλογο αιμοδοτών που την οργανώνει.</string>
    <string name="NameChoiceDates">Ονοματεπώνυμο</string>
    <string name="BloodDonatorName">Σύλλογος αιμοδοτών</string>
    <string name="DateChoice">Ημερομηνία</string>
    <string name="ConfirmButton">υποβολη</string>
    <string name="HomeInfo">Εισάγεται τα στοιχεία σας για να συνδεθείτε και να επιλέξετε ημερομηνία για αιμοδοσία</string>
    <string name="LoginButton">ΣΥΝΔΕΣΗ</string>
    <string name="EmailInsert">Ηλ. Ταχυδρομείο</string>
    <string name="CodeInsert">Κωδικός</string>
    <string name="InCaseBoneMarrow">Σε περίπτωση που θα το χρειαστεί κάποια στιγμή ένας συνανθρώπός μας θα σας ενημερώσουμε άμεσα, ώστε αν επιθυμείται να πραγματοιήσετε την δώρηση</string>
    <string name="NoteBoneMarrow">Σημείωση: το ονοματεπώνυμο να γραφτεί με κεφαλαία και όπως φαίνεται στην ταυτότητα ή σε κάποιο άλλο αναγωνριστικό (διαβατήριο, δίπλωμα, άδεια παραμονής κτλ.)</string>
    <string name="phone">Τηλέφωνο</string>
    <string name="InfoInserEdit">Εισαγωγή στοιχείων ταυτότητας αιμοδότη</string>
    <string name="SurnameInsert">Επίθετο</string>
    <string name="NameInsert">Όνομα</string>
    <string name="MotherName">Μητρώνυμο</string>
    <string name="FatherName">Πατρώνυμο</string>
    <string name="sexInsert">Φύλο</string>
    <string name="DateBirth">Ημ/νια Γέννησης</string>
    <string name="BirthPlace">Τόπος Γέννησης (Χώρα-Περιφέρεια)</string>
    <string name="EducationLevel">Μορφωτικό Επίπεδο (Προαιρετικό)</string>
    <string name="address">Διεύθυνση</string>
    <string name="tkcity">ΤΚ - Πόλη</string>
    <string name="Telephone">Σταθερό</string>
    <string name="Mobile">Κινητό</string>
    <string name="ethincnumber">Αρ. Εθν. Μητρώου</string>
    <string name="amka">ΑΜΚΑ</string>
    <string name="InsertButton">Εισαγωγη</string>
    <string name="beforedon">Πριν πας να δώσεις αίμα:</string>
    <string name="surebefore">• Σιγουρέψου ότι πληροίς τα κριτήρια αποδοχής του αιμοδότη και δεν ισχύει για σένα κάποιο από τα κριτήρια αποκλεισμού.\n\n • Να έχεις φάει ένα ελαφρύ γεύμα 3 με 4 ώρες πριν την αιμοδοσία.\n\n • Την ημέρα της αιμοδοσίας να παίρνεις πολλά υγρά, τόσο πριν όσο και μετά την αιμοδοσία.\n\n</string>
    <string name="cannotdonatetext">Δεν θα μπορείς να δώσεις αίμα εάν:</string>
    <string name="cannotdonatecases">• Δεν πληροίς τα βασικά κριτήρια για αιμοδοσία (ηλικία, κιλά, αιματοκρίτη, υγιή τρόπο ζωής).\n\n • Δεν έχεις φάει κάτι 3-4 ώρες πριν αιμοδοτήσεις.\n\n • Έχεις κάποια λοίμωξη (ακόμη και απλό κρυολόγημα), πρέπει να είσαι ελεύθερος συμπτωμάτων τουλάχιστον για 7 ημέρες.\n\n • Εάν παίρνεις κάποια αντιβιοτικά, πρέπει να περάσει τουλάχιστον για μία εβδομάδα αφού τελειώσεις τη θεραπεία.\n\n • Είχες κάποιο μεγάλο χειρουργείο τους τελευταίους έξι μήνες.\n\n • Έχεις προγραμματίσει χειρουργική επέμβαση μέσα στις επόμενες έξι εβδομάδες.\n\n • Είσαι έγκυος ή έχεις γεννήσεις το προηγούμενο τρίμηνο.\n\n • Θηλάζεις το μωρό σου και δεν έχουν περάσει 6 μήνες από τον τοκετό.\n\n • Έχεις επισκεφτεί περιοχή με ελονοσία.\n\n • Είχες σεξουαλική επαφή το τελευταίο εξάμηνο με κάποιον που δεν ξέρεις καλά.\n\n • Υποπτεύεσαι ότι μπορεί να έχεις κολλήσει κάποιο σεξουαλικά μεταδιδόμενο νόσημα (πχ AIDS ή Συφιλη): • Εάν γνωρίζεις ότι έχεις κολλήσει κάποιο σεξουαλικά μεταδιδόμενο νόσημα.\n\n • Παίρνεις αγωγή με αντιβιοτικά ή έχεις κάποια άλλη σοβαρή ασθένεια.</string>
    <string name="serviceText">Σε περίπτωση που προκύψει δυσλειτουργία της εφαρμογής ή λάθος εισαγωγή στοιχείων, επικοινωνήστε με την ομάδα εξυπηρέτησης μέσω του ηλεκτρονικού ταχυδρομείου ή του τηλέφωνου εξυπηρέτησης που εμφανίζονται παρακάτω</string>
    <string name="emailService">BloodDonations_service@gmail.com</string>
</resources>